ProRob/log/build_2025-01-14_10-08-07/package_master/stderr.log
  File "/home/rouillon/ProRob/install/package_master/lib/python3.10/site-packages/package_master/client_member_function.py", line 4
    rom package_master.msg import Num
        ^^^^^^^^^^^^^^
SyntaxError: invalid syntax

